syntax = "proto3";

option java_package = "ca.NetSysLab.ProtocolBuffers";
option java_outer_classname = "Message";

message Msg {
    bytes messageID = 1;
    bytes payload = 2;
    fixed64 checkSum = 3;
    optional string clientIp = 4;
    optional int32 clientPort = 5;
    optional string headIp = 6;
    optional int32 headPort = 7;
}
